import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

allprojects {
    pluginManager.withPlugin('java') {
        apply plugin: 'io.spring.dependency-management'

        dependencyManagement {
            /**
             * this config prevent sub project’s dependencies to override its dependency management
             * remove this or set = true if you want to override
             */
            overriddenByDependencies = false

            imports {
                mavenBom(SpringBootPlugin.BOM_COORDINATES)
            }

            dependencies {

                // specify which lombok version is used
                dependency 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

                //mapstruct
                dependencySet(group: 'org.mapstruct', version: '1.6.3') {
                    entry 'mapstruct'
                    entry 'mapstruct-processor'
                }
            }
        }

    }

    dependencies {
        runtimeOnly 'com.h2database:h2'

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // Lombok and mapstruct
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding'
        annotationProcessor 'org.mapstruct:mapstruct-processor'

        testAnnotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testCompileOnly 'org.projectlombok:lombok'
    }

}


tasks.named('test') {
    useJUnitPlatform()
}
